--- a/10-vpc/Jenkinsfile
+++ b/10-vpc/Jenkinsfile
@@ -3,8 +3,9 @@ pipeline {
         label 'AGENT-1' 
     }
     options{
-         timeout(time: 10, unit: 'MINUTES')
+         timeout(time: 30, unit: 'MINUTES')
          disableConcurrentBuilds()
+         ansiColor('xterm')
     }
     parameters {
         choice(name: 'ACTION', choices: ['Apply', 'Destroy'], description: 'Pick something') 
