--- a/20-sg/Jenkinsfile
+++ b/20-sg/Jenkinsfile
@@ -44,6 +44,19 @@ pipeline {
                  }
             }
         }
+        stage ('vpc destroy trigger') {
+
+             stage ('triggering VPC') {
+             when {
+                expression { params.ACTION == 'Destroy' }
+            }
+            steps{
+                     build job: '10-vpc', parameters: [string(name: 'ACTION', value: "Destroy")], wait: false
+            }
+                
+        }
+
+        }
         // stage('Deploy') {
         //     when {     
         //          expression {
