--- a/70-ecr/Jenkinsfile
+++ b/70-ecr/Jenkinsfile
@@ -16,7 +16,7 @@ pipeline {
                 withAWS(region:'us-east-1', credentials: "aws-configure") {
 
                 sh """
-                cd 40-eks
+                cd 70-ecr
                 terraform init -reconfigure
                 terraform plan -out=tfplan 
                 """
@@ -24,14 +24,14 @@ pipeline {
             }
         }
         stage('Apply or Destroy') {
-              input {
-                message "Should we continue?"
-                ok "Yes, we should."
-              }
+            //   input {
+            //     message "Should we continue?"
+            //     ok "Yes, we should."
+            //   }
             steps {
                  withAWS(region:'us-east-1', credentials: "aws-configure") {
                 sh """
-                cd 40-eks
+                cd 70-ecr
                 if [ ${params.ACTION} == 'Apply' ]
                 then
                 terraform apply -auto-approve tfplan
