committed for jenkins

--- a/20-sg/Jenkinsfile
+++ b/20-sg/Jenkinsfile
@@ -56,6 +56,9 @@ pipeline {
               
         }
      stage ('parlell-1') {
+        when {
+                expression { params.ACTION == 'apply' }
+            }
             parallel {
             stage ('bastion') {
                 when {
