committed for jenkins

--- a/20-sg/Jenkinsfile
+++ b/20-sg/Jenkinsfile
@@ -94,7 +94,7 @@ pipeline {
                 stages{
                   stage ('ACM') {
                     steps {
-                        build job: '50-acm', parameters: [string(name: 'ACTION', value: "Apply")], wait: false
+                        build job: '50-acm', parameters: [string(name: 'ACTION', value: "Apply")]
                     }
                  }
                  stage ('ALB') {
